project-detail: fix order, spacings and event listing

--- a/meinberlin/assets/scss/components_user_facing/_actionable-list.scss
+++ b/meinberlin/assets/scss/components_user_facing/_actionable-list.scss
@@ -47,6 +47,19 @@
     display: flex;
 }
 
+.actionable-list__item--faded {
+    color: $gray-light;
+
+    h4,
+    .bicon {
+        color: $gray-light;
+    }
+
+    a {
+        text-decoration-color: $gray-light;
+    }
+}
+
 .actionable-list__item__actions {
     margin-left: auto;
     text-align: right;
